--- a/css/estilo.css
+++ b/css/estilo.css
@@ -73,8 +73,8 @@ body {
 	float: left;
 	background-color: #E4E4E4;
 	border: none;
-	font-weight: bold;
-	font-size: 14px;
+	font-weight: normal;
+	font-size: 13px;
 	padding: 5px;
 	margin: 5px 0 5px 5px;
 }
@@ -84,5 +84,36 @@ body {
 	background-color: #E4E4E4;
 	border: none;
 	margin: 5px 0 12px 0;
-	height: 26px;
+	height: 25px;
+}
+
+.clear {
+	clear: both;
+}
+
+#head-nav {
+	width: 100%;
+	height: 60px;
+	background-color: #BB1919;
+}
+
+#inicio {
+	float: left;
+	text-decoration: none;
+	position: relative;
+	top: 15px;
+	left: 180px;
+}
+
+#location-news {
+	float: right;
+	text-decoration: none;
+	color: white;
+	font-size: 20px;
+	padding-top: 15px;
+	padding-right: 235px;
+}
+
+#location-news:hover{
+	text-decoration: underline;
 }
