--- a/css/estilo.css
+++ b/css/estilo.css
@@ -92,6 +92,7 @@ body {
 }
 
 #head-nav {
+	border-top: #CCCCCC solid;
 	width: 100%;
 	height: 60px;
 	background-color: #BB1919;
@@ -110,8 +111,11 @@ body {
 	text-decoration: none;
 	color: white;
 	font-size: 20px;
-	padding-top: 15px;
-	padding-right: 235px;
+	position: relative;
+	top: 13px;
+	right: 220px;
+	padding: 6px;
+	border: 0.5px #BB4545 solid;
 }
 
 #location-news:hover{
