--- a/css/estilo.css
+++ b/css/estilo.css
@@ -36,6 +36,7 @@ body {
 	text-decoration: none;
 	margin: 12px 50px 12px 12px;
 	float: left;
+	color: black;
 }
 
 #linea-vertica-pico {
@@ -63,6 +64,7 @@ body {
 	text-decoration: none;
 	margin: 12px 12px;
 	float: left;
+	color: black;
 }
 
 .fa.fa-sort-desc {
@@ -124,6 +126,127 @@ body {
 
 #navbar {
 	width: 100%;
-	height: 40px;
+	height: 38px;
 	background-color: #A91717;
+}
+
+#navbar-menu {
+	max-width: 1025px;
+	margin: 0 auto;
+	height: 38px;
+}
+
+#navbar-menu a{
+	color: white;
+	text-decoration: none;
+	font-weight: normal;
+	font-size: 15px;
+	padding: 8px 10px;
+	position: relative;
+	top: 10px;
+	border-right: 1px solid #BB4545;
+}
+
+#navbar-menu a:hover{
+	border-bottom: 2px white solid;
+}
+
+#navbar-menu .menu-more:hover{
+	background-color: black;
+}
+
+#page-container {
+	width: 1000px;
+	margin: 0 auto;
+}
+
+#main-article {
+	
+}
+
+h2 {
+	font-weight: normal;
+	font-size: 20px;
+	border-bottom: solid #A91717 3px;
+	width: 101px;
+}
+
+h3 a {
+	text-decoration: none;
+	color: black;
+	font-weight: bold;
+	font-size: 27px;
+}
+
+h3 a:hover {
+	color: #1167A8;
+}
+
+#article-container {
+	float: left;
+	width: 670px;
+	padding-bottom: 10px;
+	border-right: solid 1px #CCCCCC;
+}
+
+#article-summary {
+	color: #5a5a5a;
+	font-size: 15px;
+	width: 240px;
+	float: left;
+}
+
+#article-summary img{
+	width: 15px;
+	height: 15px;
+	position: relative;
+	top: 2px;
+}
+
+.enlace-articulo {
+	color: #BB1919;
+	text-decoration: none;
+	border-left: solid 1px #CCCCCC;
+}
+
+.enlace-articulo:hover {
+ 	color: #1191CE;
+}
+
+#article-image {
+	width: 420px;
+}
+
+.hr-article {
+	width: 30px;
+	border-top: solid 1px #A91717;
+}
+
+.link-parrafo .link-article{
+	text-decoration: none;
+	color: black;
+}
+
+.link-parrafo .link-article:hover{
+	color: #1191CE;
+}
+
+#video-container {
+	float: left;
+	margin: 0 20px;
+	width: 280px;
+}
+
+h4 {
+	font-weight: normal;
+	font-size: 20px;
+}
+
+.a-live {
+	text-decoration: none;
+	color: black;
+}
+
+.a-live:hover {
+	color: #1191CE;
 }
